# pattern_recognition_hub

./: README.md  建立.txt
project/Droplet_quality_evaluation_count/: CMakeLists.txt  connect_region.cpp  connect_region.h  k-mean.cpp  k-mean.h  main.cpp
project/Droplet_quality_evaluation_count/cpp/: CMakeLists.txt  connect_region.cpp  connect_region.h  k-mean.cpp  k-mean.h  main.cpp
《学习OpenCV3》中英文PDF+源代码/demo/: CMakeLists.txt  example_15-01.cpp  example_15-02_平均背景法.cpp  example_15-03.cpp  example_15_01_帧间差分.cpp
模式识别第四版/: url.txt
模式识别第四版/demo/: readme.txt
模式识别第四版/demo/PPT/: 11_clustering_algorithms.ppt  12_clustering_algorithms.ppt  13_clustering_algorithms.ppt  14_clustering_algorithms1.ppt  15_clustering_algorithms1-14-12.ppt  16_clustering_algorithms-14-12.ppt  1_Classifiers_Bayes.ppt  2_Linear_Classifiers.ppt  3_Non_Linear_Classifiers.ppt  4_Feature_Selection.ppt  5_Feature Generation.ppt  6_Template_Matching.ppt  7_Context_Dependent_Classification.ppt  8_System Evalutation.ppt
模式识别第四版/demo/prdemo/: Checkers_book.asv  imbook.mat  setmat.mat  slider6.asv  startdemo.m
模式识别第四版/demo/prdemo/common/: ARXIKES.M  Arx1hl.m  Arx2hl.m  Bptr.m  Bptr3.m  Bptra.m  Bptra3.m  Bptrm.m  Bptrm3.m  Bptrx.m  Bptrx3.m  COST_FUN.M  CalcKernel.m  Checkers_book.m  GAUSSIAN.M  MAKEDEC.M  PL3L.M  PLOT2.M  PLOT3L.M  Plot1e.m  Plotr.m  SLIDER.M  SLIDER.asv  SLIDER2.M  SLIDER3.M  SLIDER3.asv  SMO2.asv  SMO2.m  Sakoe.m  Slider1.m  Trbp2.m  Trbp3.m  Trbpa2.m  Trbpa3.m  Trbpm2.m  Trbpm3.m  Trbpx2.m  Trbpx3.m  boun1.M  boun2.M  (+40 more)
